# gcut

./: Cargo.toml  build.rs
src/: gpustat.rs  main.rs
src/win/: coretemp.h
